--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,6 @@ test:
 production:
   <<: *default
   database: furima_29583_production
-  username: furima_29583
+  username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket:   /var/lib/mysql/mysql.sock
